2010-12-10  Tom  <tom@localhost6.localdomain6>

	* src/lib/plugins/web_plugin/gourmetweb/templates/shop.html: Add forms to add/remove from pantry.

	* src/lib/plugins/web_plugin/gourmetweb/recview/views.py (MyShoppingList.get_shopper): Use database for shopping list so we can store e.g. pantry data.
	(multiply_rec): Use 'yields' when possible; otherwise use multiply
	(shop_to_pantry): Add callback to move items to pantry
	(shop_to_list): Add callback to remove items from pantry

	* src/lib/plugins/web_plugin/gourmetweb/urls.py: Add shopping list
	callbacks (move to/from pantry)

2010-12-09  Tom  <tom@localhost6.localdomain6>

	* src/lib/plugins/key_editor/keyEditor.py (KeyEditor.isearchCB):
	Set cursor to busy while searching.

	* src/lib/recindex.py (RecIndex.search): Fix busy cursor while searching.

	* src/lib/backends/db.py (RecData.get_ingkeys_with_count): Fix bug
	that broke IngredientEditor view entirely.

	* src/lib/plugins/key_editor/keyEditor.py (KeyStore.reset_views):
	Don't undo search when resetting view after applying an edit.

	* src/lib/backends/db.py (RecData.do_modify): Force unicode (Fixes #3120915)

2010-11-28  Thomas Mills Hinkle  <tom@pebble>

	* src/lib/backends/db.py (RecData.update_version_info): Patch from Jeff Raber to remove sqlite3 reference
	(RecData.get_unique_values): Patch from buergi to get working with MySQL

2010-11-16  Thomas Mills Hinkle  <tom@pebble>

	* src/lib/reccard.py (DescriptionEditorModule.update_from_database):
	Fix signal used for spinbutton for yield and any other
	spinbuttons. (patch from Saulius Lukauskas)

	* src/lib/plugins/import_export/mastercook_import_plugin/mastercook_plaintext_importer.py:
	Patch from Saulius Lukauskas fixing column-matching/dash-matching
	conflict that broke ingredient import.

2010-10-20  Thomas Hinkle  <tom@grenville>

	* src/lib/plugins/web_plugin/gourmetweb/templates/rec.html: Start
	adding some style to web-based recipe view.
